--- a/index.html
+++ b/index.html
@@ -29,201 +29,216 @@
     gtag('js', new Date());
     gtag('config','G-64FE63JQ3H');
   </script>
-
-  <style>
-    .brand{display:flex;align-items:center;gap:10px;font-weight:600}
-    .cc-logo{height:32px;width:32px;border-radius:999px;background:#38bdf8;display:flex;align-items:center;justify-content:center;font-size:12px;color:#020617;font-weight:800}
-    .list{margin:8px 0 0;padding-left:18px;font-size:14px;color:var(--muted)}
-    .list li{margin-bottom:4px}
-    .table-wrap{overflow-x:auto}
-    .badge-ai{font-size:11px;border-radius:999px;border:1px solid var(--line);padding:2px 8px;color:var(--muted)}
-  </style>
 </head>
 
-<body>
-<header class="nav">
-  <div class="brand">
-    <div class="cc-logo">CC</div>
-    <span>PayAI.creditcard</span>
-  </div>
-  <nav class="links">
-    <a href="https://fin.creditcard/">Collection</a>
-    <a href="https://tech.creditcard/">Tech</a>
-    <a href="https://intelligence.creditcard/">Intelligence</a>
-    <a href="https://choose.creditcard/">Choose</a>
-  </nav>
-</header>
+<body class="bg-slate-950 text-slate-100">
 
-<div class="wrap">
+  <!-- HEADER – CC unified -->
+  <header class="site-header">
+    <div class="nav-inner max-w-6xl">
+      <div class="brand">
+        <div class="cc-logo">CC</div>
+        <div class="brand-text">
+          <span class="brand-title">PayAI.creditcard</span>
+          <span class="brand-subtitle">Risk · Fraud · Limits · Offers</span>
+        </div>
+      </div>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>AI for Cards & Payments</h1>
-    <p>How AI scores risk, fights fraud and personalizes every swipe, tap and transaction.</p>
-    <a class="cta"
-       href="https://choose.creditcard/compare?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=payai_top">
-      Compare AI-Driven Cards
-    </a>
-  </section>
-
-  <!-- What is PayAI -->
-  <section class="section">
-    <h2>What is “Pay AI” in card systems?</h2>
-    <p class="small">
-      Pay AI is the use of machine learning and data models across the entire card lifecycle:
-      from who gets approved, to which transactions are blocked, to which offers you see in your app.
-    </p>
-    <ul class="list">
-      <li>• Credit risk models decide who is approved</li>
-      <li>• Real-time fraud engines score every transaction</li>
-      <li>• AI-driven limits adapt to your behaviour</li>
-      <li>• Personalised rewards and offers per customer</li>
-      <li>• Collections and support flows are optimised by models</li>
-    </ul>
-  </section>
-
-  <!-- Where AI sits in the stack -->
-  <section class="section">
-    <h2>Where AI lives in the card stack</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Onboarding & KYC</h3>
-        <p class="small">
-          Identity checks, document reading and risk flags at signup.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Risk & underwriting</h3>
-        <p class="small">
-          Models predict default probability and set starting limits.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Fraud scoring</h3>
-        <p class="small">
-          Every transaction is scored in milliseconds for fraud risk.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Authorisation strategy</h3>
-        <p class="small">
-          AI helps decide when to approve, challenge or decline borderline cases.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Offers & rewards</h3>
-        <p class="small">
-          Segment-based offers, merchant-specific deals, personalised boosts.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Collections & retention</h3>
-        <p class="small">
-          Predict who needs reminders, plans or proactive outreach.
-        </p>
-      </div>
+      <nav class="nav-links">
+        <a href="https://fin.creditcard/?utm_source=payai.creditcard&utm_medium=nav&utm_campaign=collection">
+          Collection
+        </a>
+        <a href="https://tech.creditcard/?utm_source=payai.creditcard&utm_medium=nav&utm_campaign=tech">
+          Tech
+        </a>
+        <a href="https://intelligence.creditcard/?utm_source=payai.creditcard&utm_medium=nav&utm_campaign=intelligence">
+          Intelligence
+        </a>
+        <a href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=nav&utm_campaign=choose">
+          Choose
+        </a>
+      </nav>
     </div>
-  </section>
+  </header>
 
-  <!-- Table: AI use cases -->
-  <section class="section">
-    <h2>Key AI use cases in cards</h2>
-    <div class="table-wrap">
-      <table class="table">
-        <thead>
-        <tr>
-          <th>Area</th>
-          <th>AI task</th>
-          <th>Outcome</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>Fraud</td>
-          <td>Real-time anomaly detection</td>
-          <td>Block bad transactions, reduce false positives.</td>
-        </tr>
-        <tr>
-          <td>Risk</td>
-          <td>Credit scoring & PD models</td>
-          <td>Better approvals and fairer pricing.</td>
-        </tr>
-        <tr>
-          <td>Rewards</td>
-          <td>Next-best-offer modelling</td>
-          <td>More relevant perks and card upgrades.</td>
-        </tr>
-        <tr>
-          <td>Support</td>
-          <td>Assistants & triage</td>
-          <td>Faster resolutions, fewer calls.</td>
-        </tr>
-        <tr>
-          <td>Ops</td>
-          <td>Forecasting & simulation</td>
-          <td>Smarter limits, buffers and capacity planning.</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
+  <main class="cc-page">
+    <p class="cc-breadcrumb">PayAI.creditcard · Risk · Fraud · Offers · Limits</p>
 
-  <!-- Benefits & risks -->
-  <section class="section">
-    <h2>Benefits – and risks – of AI in payments</h2>
-    <p class="small">
-      AI can make payments safer and smoother, but also needs guardrails:
+    <!-- HERO -->
+    <section class="hero">
+      <h1>AI for Cards &amp; Payments</h1>
+      <p class="hero-lead">
+        How AI scores risk, fights fraud and personalizes every swipe, tap and transaction.
+      </p>
+      <a class="cta"
+         href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=payai_top">
+        Compare AI-Driven Cards
+      </a>
+    </section>
+
+    <!-- What is PayAI -->
+    <section class="section">
+      <h2>What is “Pay AI” in card systems?</h2>
+      <p class="small">
+        Pay AI is the use of machine learning and data models across the entire card lifecycle:
+        from who gets approved, to which transactions are blocked, to which offers you see in your app.
+      </p>
+      <ul class="list">
+        <li>Credit risk models decide who is approved</li>
+        <li>Real-time fraud engines score every transaction</li>
+        <li>AI-driven limits adapt to your behaviour</li>
+        <li>Personalised rewards and offers per customer</li>
+        <li>Collections and support flows are optimised by models</li>
+      </ul>
+    </section>
+
+    <!-- Where AI sits in the stack -->
+    <section class="section">
+      <h2>Where AI lives in the card stack</h2>
+      <div class="cluster-grid">
+        <div class="cluster-card">
+          <h3>Onboarding &amp; KYC</h3>
+          <p class="small">
+            Identity checks, document reading and risk flags at signup.
+          </p>
+        </div>
+        <div class="cluster-card">
+          <h3>Risk &amp; underwriting</h3>
+          <p class="small">
+            Models predict default probability and set starting limits.
+          </p>
+        </div>
+        <div class="cluster-card">
+          <h3>Fraud scoring</h3>
+          <p class="small">
+            Every transaction is scored in milliseconds for fraud risk.
+          </p>
+        </div>
+        <div class="cluster-card">
+          <h3>Authorisation strategy</h3>
+          <p class="small">
+            AI helps decide when to approve, challenge or decline borderline cases.
+          </p>
+        </div>
+        <div class="cluster-card">
+          <h3>Offers &amp; rewards</h3>
+          <p class="small">
+            Segment-based offers, merchant-specific deals, personalised boosts.
+          </p>
+        </div>
+        <div class="cluster-card">
+          <h3>Collections &amp; retention</h3>
+          <p class="small">
+            Predict who needs reminders, plans or proactive outreach.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Table: AI use cases -->
+    <section class="section">
+      <h2>Key AI use cases in cards</h2>
+      <div class="table-wrap">
+        <table class="table">
+          <thead>
+          <tr>
+            <th>Area</th>
+            <th>AI task</th>
+            <th>Outcome</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>Fraud</td>
+            <td>Real-time anomaly detection</td>
+            <td>Block bad transactions, reduce false positives.</td>
+          </tr>
+          <tr>
+            <td>Risk</td>
+            <td>Credit scoring &amp; PD models</td>
+            <td>Better approvals and fairer pricing.</td>
+          </tr>
+          <tr>
+            <td>Rewards</td>
+            <td>Next-best-offer modelling</td>
+            <td>More relevant perks and card upgrades.</td>
+          </tr>
+          <tr>
+            <td>Support</td>
+            <td>Assistants &amp; triage</td>
+            <td>Faster resolutions, fewer calls.</td>
+          </tr>
+          <tr>
+            <td>Ops</td>
+            <td>Forecasting &amp; simulation</td>
+            <td>Smarter limits, buffers and capacity planning.</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- Benefits & risks -->
+    <section class="section">
+      <h2>Benefits – and risks – of AI in payments</h2>
+      <p class="small">
+        AI can make payments safer and smoother, but also needs guardrails:
+      </p>
+      <ul class="list">
+        <li>Fewer false declines on legitimate travel or large purchases</li>
+        <li>Faster detection of stolen cards and account takeover</li>
+        <li>Smarter line management instead of blunt credit cuts</li>
+        <li>Risk of bias if training data is not controlled</li>
+        <li>Need for explainability and regulatory oversight</li>
+      </ul>
+    </section>
+
+    <!-- Links to other AI domains -->
+    <section class="section">
+      <h2>The AI &amp; cards namespace</h2>
+      <p class="small">Related domains in The CreditCard Collection:</p>
+      <div class="cluster-grid">
+        <a class="cluster-card"
+           href="https://intelligence.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=intelligence">
+          <h3>Intelligence.creditcard</h3>
+          <p class="small">Deeper dive into risk engines &amp; data science.</p>
+        </a>
+        <a class="cluster-card"
+           href="https://aipay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=aipay">
+          <h3>AIPay.creditcard</h3>
+          <p class="small">Brand-friendly angle on AI-powered payment products.</p>
+        </a>
+        <a class="cluster-card"
+           href="https://tech.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=tech_ai">
+          <h3>Tech.creditcard</h3>
+          <p class="small">Technical look at device signals, ML models &amp; scoring.</p>
+        </a>
+      </div>
+    </section>
+
+    <!-- CTA bottom -->
+    <section class="section">
+      <h2>Finding an AI-smart card – as a user</h2>
+      <p class="small">
+        PayAI.creditcard explains how issuers use AI.<br />
+        To compare real cards on fees, perks and day-to-day experience:
+      </p>
+      <a class="cta"
+         href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=payai_bottom">
+        Compare on Choose.Creditcard
+      </a>
+    </section>
+  </main>
+
+  <!-- MINI FOOTER -->
+  <footer class="mini-footer">
+    <p class="mini-footer-main">
+      © 2025 The CreditCard Collection — ronarn AS
     </p>
-    <ul class="list">
-      <li>• Fewer false declines on legitimate travel or large purchases</li>
-      <li>• Faster detection of stolen cards and account takeover</li>
-      <li>• Smarter line management instead of blunt credit cuts</li>
-      <li>• Risk of bias if training data is not controlled</li>
-      <li>• Need for explainability and regulatory oversight</li>
-    </ul>
-  </section>
-
-  <!-- Links to other AI domains -->
-  <section class="section">
-    <h2>The AI & cards namespace</h2>
-    <p class="small">Related domains in The CreditCard Collection:</p>
-    <div class="grid">
-      <a class="card"
-         href="https://intelligence.creditcard/?utm_source=payai.creditcard&utm_medium=referral">
-        <h3>Intelligence.creditcard</h3>
-        <p class="small">Deeper dive into risk engines & data science.</p>
-      </a>
-      <a class="card"
-         href="https://aipay.creditcard/?utm_source=payai.creditcard&utm_medium=referral">
-        <h3>AIPay.creditcard</h3>
-        <p class="small">Brand-friendly angle on AI-powered payment products.</p>
-      </a>
-      <a class="card"
-         href="https://tech.creditcard/ai-fraud?utm_source=payai.creditcard&utm_medium=referral">
-        <h3>Tech.Creditcard / AI & fraud</h3>
-        <p class="small">Technical look at device signals, ML models and scoring.</p>
-      </a>
-    </div>
-  </section>
-
-  <!-- CTA bottom -->
-  <section class="section">
-    <h2>Finding an AI-smart card – as a user</h2>
-    <p class="small">
-      PayAI.creditcard explains how issuers use AI.  
-      To compare real cards on fees, perks and day-to-day experience:
+    <p class="mini-footer-contact">
+      Contact: <a href="mailto:support@cc.creditcard">support@cc.creditcard</a>
     </p>
-    <a class="cta"
-       href="https://choose.creditcard/compare?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=payai_bottom">
-      Compare on Choose.Creditcard
-    </a>
-  </section>
-
-  <footer class="footer">
-    Part of <strong>The CreditCard Collection</strong> — by ronarn<br />
-    Contact: <a href="mailto:support@ronarn.com">support@ronarn.com</a>
   </footer>
 
-</div>
 </body>
 </html>
