--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>PayAI.Creditcard – AI-Orchestrated Card Payments Explained</title>
-  <meta name="description" content="Understand how AI systems route, score and authenticate credit-card payments in real time. Independent explainer of AI-driven authorisations, fraud controls and payment flows." />
+  <title>PayAI.Creditcard – AI Assistants for Payments & Card Management Explained</title>
+  <meta name="description" content="How AI assistants help with credit card payments: alerts, budgeting, subscription control, due-date reminders and smart insights. Neutral explainer of AI copilots for card usage." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://payai.creditcard/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="PayAI.Creditcard – AI-Orchestrated Card Payments Explained" />
-  <meta property="og:description" content="Learn how AI engines decide where to route a card payment, when to add extra checks, and how to balance fraud controls with smooth approvals." />
+  <meta property="og:title" content="PayAI.Creditcard – AI Assistants for Card Payments Explained" />
+  <meta property="og:description" content="Understand how AI-powered payment assistants work: from spend insights and reminders to risk alerts and smarter use of your credit cards." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://payai.creditcard/" />
   <meta property="og:image" content="https://choose.creditcard/preview.png?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=og_image" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="PayAI.Creditcard – AI in Card Payment Flows" />
-  <meta name="twitter:description" content="Independent explanation of AI-powered routing, authorisation and risk checks in modern credit card payments." />
+  <meta name="twitter:title" content="PayAI.Creditcard – AI Payment Copilots Explained" />
+  <meta name="twitter:description" content="Independent overview of AI-powered assistants that help you understand, schedule and control credit card payments." />
   <meta name="twitter:image" content="https://choose.creditcard/preview.png?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=twitter_image" />
 
   <!-- GA4 -->
@@ -34,7 +34,7 @@
   <!-- Tailwind for utility classes -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Your shared minisite styles -->
+  <!-- Shared minisite styles -->
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body class="bg-slate-950 text-slate-100">
@@ -44,13 +44,13 @@
         <div class="cc-logo">CC</div>
         <div class="brand-text">
           <div class="brand-title">PayAI.Creditcard</div>
-          <div class="brand-subtitle">AI-Orchestrated Card Payments</div>
+          <div class="brand-subtitle">AI Assistants for Card Payments Explained</div>
         </div>
       </div>
       <nav class="nav-links" aria-label="Page navigation">
         <a href="#overview">Overview</a>
-        <a href="#mechanics">How It Works</a>
-        <a href="#compare">Compare</a>
+        <a href="#use-cases">What AI Assistants Do</a>
+        <a href="#limits">Limits & Risks</a>
       </nav>
     </div>
   </header>
@@ -66,193 +66,152 @@
     <!-- Hero -->
     <section class="hero">
       <div class="hero-content">
-        <h1>How AI Orchestrates a Card Payment From Tap to Approval</h1>
+        <h1>AI “Copilots” for Credit Card Payments & Spending</h1>
         <p class="hero-lead">
-          PayAI.Creditcard looks at the AI engines that sit between card, merchant, network and issuer — scoring risk,
-          selecting routes and deciding which payments sail through and which need extra checks.
+          New banking and fintech tools use AI to summarise your spending, warn about upcoming bills and highlight unusual activity. This page explains what these assistants can and cannot do around credit card payments.
         </p>
-        <a class="cta" href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=hero_cta">
-          Compare card technology features
+        <a class="cta" href="https://choose.creditcard/technology/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=hero_cta">
+          Explore the Technology hub on Choose.Creditcard
         </a>
       </div>
     </section>
 
-    <!-- Content sections -->
+    <!-- Overview -->
     <section id="overview" class="section">
-      <h2>What Does “PayAI” Mean in Practice?</h2>
+      <h2>What Is an AI Payment Assistant?</h2>
       <p>
-        In card payments, “AI” usually means a decision engine that has been trained on large volumes of transaction
-        data. Instead of a fixed ruleset, it looks at real behaviour: where people usually spend, how devices behave,
-        how merchants process refunds and what fraud attempts have looked like historically.
+        An AI payment assistant is a software layer – often in your banking app or a separate budgeting app –
+        that analyses transactions and card data to give you easier-to-read summaries and suggestions.
       </p>
       <p>
-        PayAI-style systems sit inside gateways, acquirers, networks and issuers. Each actor applies its own view of
-        risk and performance, but the overall goal is similar: approve as many legitimate transactions as possible while
-        keeping fraud and abuse at an acceptable level.
+        Instead of scrolling through raw statements, you might see:
       </p>
-    </section>
-
-    <section id="mechanics" class="section">
-      <h2>How AI Watches a Payment Flow in Real Time</h2>
+      <ul>
+        <li>Automatic categorisation of purchases (groceries, travel, subscriptions, etc.).</li>
+        <li>Forecasts of when your statement and minimum payments are due.</li>
+        <li>Highlights of unusual activity or big upcoming charges.</li>
+        <li>Explanations of fees or interest in more human language.</li>
+      </ul>
       <p>
-        When you tap, dip or submit card details online, the payment message is enriched with metadata: merchant
-        category, country, amount, device, token type and more. AI models consume this stream and assign a score or set
-        of labels before the issuer makes a final decision.
-      </p>
-      <p>
-        Some PayAI platforms propose routing strategies too. For example, they may choose between multiple acquirers,
-        networks or authentication paths based on which combination historically delivers the best approval rate for a
-        given pattern of transaction and cardholder.
+        The assistant does not replace your bank or card agreement; it sits on top of existing systems.
       </p>
     </section>
 
-    <section class="section">
-      <h2>Balancing Friction and Safety at Checkout</h2>
+    <!-- What AI assistants do -->
+    <section id="use-cases" class="section">
+      <h2>Common Use-Cases for AI Around Card Payments</h2>
+      <p>Typical functions you’ll see marketed as “AI” in payment assistants include:</p>
+      <ul>
+        <li>
+          <strong>Smart alerts:</strong> reminders before due dates, nudges when spending spikes, or alerts when
+          a subscription renews at a higher price.
+        </li>
+        <li>
+          <strong>Spending insights:</strong> monthly breakdowns, visual trends and simple explanations of where
+          your money went.
+        </li>
+        <li>
+          <strong>Scenario questions:</strong> chat-style interfaces where you can ask “How much did I spend on travel last month?” or “What happens if I only pay the minimum?”.
+        </li>
+        <li>
+          <strong>Subscription control:</strong> detecting recurring charges and helping you identify things you
+          may want to cancel.
+        </li>
+        <li>
+          <strong>Multi-card overview:</strong> seeing balances, due dates and key terms across several cards in
+          one place, depending on data access and permissions.
+        </li>
+      </ul>
       <p>
-        A key task for AI in payments is deciding when to introduce friction. A low-risk, familiar purchase might be
-        approved silently, while an unusual pattern triggers 3-D Secure, an app push or additional verification. Good
-        models reduce nuisance challenges while still catching suspicious behaviour.
-      </p>
-      <p>
-        Issuers can tune these systems differently depending on portfolio strategy. Some prioritise strict fraud
-        controls; others put more weight on seamless approvals for frequent travellers and online shoppers. PayAI
-        tooling provides the signals needed to make those trade-offs explicit.
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Merchant-Side Intelligence and Smart Routing</h2>
-      <p>
-        Merchants and payment service providers also use PayAI-style tools. By analysing historic declines and chargeback
-        reasons, they can adjust which acquirers or networks they use for certain card ranges, regions or transaction
-        sizes.
-      </p>
-      <p>
-        This merchant-side intelligence does not change your card conditions, but it can influence how often a payment
-        goes through on the first attempt, especially for cross-border and digital goods purchases.
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Data, Governance and Model Risk</h2>
-      <p>
-        Behind the scenes, AI-driven payment systems rely on sensitive data: transaction history, device identifiers and
-        sometimes behavioural signals. Providers are expected to document how models are trained, how long data is kept
-        and how potential bias is monitored.
-      </p>
-      <p>
-        For cardholders and merchants, this means looking beyond marketing claims and checking what is said in privacy
-        notices, risk disclosures and scheme-level documentation about automated decision-making and the right to
-        contest outcomes.
+        These tools are most helpful when they make existing information more understandable – not when they try
+        to guess what you “should” do with debt.
       </p>
     </section>
 
-    <!-- Comparison block -->
-    <section id="compare" class="section">
-      <h2>Comparing PayAI Approaches in Card Programmes</h2>
-      <div class="table-wrap">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Area</th>
-              <th>What to Look For</th>
-              <th>Why It Matters</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Approval Performance</td>
-              <td>High legitimate approval rates, especially online and cross-border</td>
-              <td>Directly affects how often real customers see declines at checkout.</td>
-            </tr>
-            <tr>
-              <td>Fraud &amp; Abuse Controls</td>
-              <td>Ability to adapt thresholds without blunt blocks</td>
-              <td>Improves safety without shutting down normal use.</td>
-            </tr>
-            <tr>
-              <td>Routing Intelligence</td>
-              <td>Support for smart acquirer and network selection</td>
-              <td>Can lower costs for merchants and improve success on tricky payments.</td>
-            </tr>
-            <tr>
-              <td>Transparency</td>
-              <td>Clear explanations for declines, challenges and reviews</td>
-              <td>Helps cardholders understand what happened and what to do next.</td>
-            </tr>
-            <tr>
-              <td>Privacy &amp; Governance</td>
-              <td>Documented model oversight and data protection measures</td>
-              <td>Indicates how seriously AI risk is treated by the programme.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <p class="small">
-        For a broader view of how card technology, rewards and protections interact, visit
-        <a href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=comparison_section">
-          Choose.Creditcard
-        </a>.
+    <!-- Limits & risks -->
+    <section id="limits" class="section">
+      <h2>Limits, Privacy and Things to Watch Out For</h2>
+      <p>AI assistants can be useful, but there are important limits:</p>
+      <ul>
+        <li>
+          <strong>Not a decision-maker:</strong> they usually cannot change your credit limit, due date or terms.
+          Those are still controlled by your card issuer.
+        </li>
+        <li>
+          <strong>Data access & privacy:</strong> to work properly, assistants may need access to detailed
+          transaction data. It matters how this data is stored, shared and secured.
+        </li>
+        <li>
+          <strong>Possible errors:</strong> categorisation and predictions can be wrong. You should not rely on them
+          as your only record of spending or obligations.
+        </li>
+        <li>
+          <strong>No personalised financial advice:</strong> most tools are designed for general information and
+          cannot account for your full financial situation.
+        </li>
+      </ul>
+      <p>
+        Always read how an AI assistant handles your data, and treat its summaries as a complement to, not a
+        replacement for, your official card statements.
       </p>
     </section>
 
     <!-- Cluster links -->
     <section class="section">
-      <h2>Explore Related Payment Technologies</h2>
+      <h2>Explore Related Card Technology Topics</h2>
       <div class="cluster-grid">
-        <a class="cluster-card" href="https://bitcoinpay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_bitcoinpay">
-          <h3>BitcoinPay.Creditcard</h3>
-          <p>Bitcoin-linked card payments and settlement logic.</p>
+        <a class="cluster-card" href="https://aipay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_aipay">
+          <h3>AIPay.Creditcard</h3>
+          <p>Back-end AI in fraud checks, routing and risk scoring.</p>
         </a>
-        <a class="cluster-card" href="https://btcpay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_btcpay">
-          <h3>BTCPay.Creditcard</h3>
-          <p>Merchant-side crypto acceptance and gateway flows.</p>
+        <a class="cluster-card" href="https://assistant.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_assistant">
+          <h3>Assistant.Creditcard</h3>
+          <p>Assistant-style tools that explain card terms and conditions.</p>
         </a>
-        <a class="cluster-card" href="https://tokens.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_tokens">
-          <h3>Tokens.Creditcard</h3>
-          <p>Tokenised rewards and on-chain incentive structures.</p>
-        </a>
-        <a class="cluster-card" href="https://defipay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_defipay">
-          <h3>DefiPay.Creditcard</h3>
-          <p>DeFi-linked card products and programmable routing.</p>
+        <a class="cluster-card" href="https://digitalpay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_digitalpay">
+          <h3>DigitalPay.Creditcard</h3>
+          <p>How digital-first card products structure payments and UX.</p>
         </a>
         <a class="cluster-card" href="https://virtualpay.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_virtualpay">
           <h3>VirtualPay.Creditcard</h3>
-          <p>Virtual card numbers, tokens and wallet-based payments.</p>
+          <p>Virtual cards and tokenised numbers for safer online use.</p>
+        </a>
+        <a class="cluster-card" href="https://wallets.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=cluster_wallets">
+          <h3>Wallets.Creditcard</h3>
+          <p>Digital wallets, devices and how they connect to your cards.</p>
         </a>
       </div>
     </section>
 
-    <!-- Collection section -->
+    <!-- Collection / hub snippet -->
     <section class="section">
       <h2>Part of The CreditCard Collection</h2>
       <p class="small">
-        PayAI.Creditcard is one spoke in <strong>The CreditCard Collection</strong> — a network of focused microsites operated by ronarn AS. Each site explains a single piece of payment or card infrastructure in plain language and then connects you to independent comparison tools.
+        PayAI.Creditcard is part of <strong>The CreditCard Collection</strong> — an educational network of minisites
+        by ronarn AS. Each page focuses on one dimension of credit card usage, technology, rewards or risk.
       </p>
       <p class="small">
-        This page focuses on AI-driven orchestration of card payments. It does not issue cards or provide personalised
-        financial advice. Instead, it mirrors how issuers, networks and payment providers describe these systems in
-        technical and regulatory documentation.
+        We do not give personalised advice or rank specific banks here. The goal is to explain concepts so you can
+        better interpret official documentation and future comparison tables on the main hub.
       </p>
 
-      <!-- Technology hub snippet -->
       <div class="hub-link">
         <a href="https://choose.creditcard/technology/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=minisite_to_hub"
-           class="text-sm text-slate-600 hover:text-slate-900">
-          Learn more at the Technology hub
+           class="text-sm text-slate-500 hover:text-slate-200">
+          Learn more at the Technology hub on Choose.Creditcard
         </a>
       </div>
     </section>
 
     <!-- Bottom CTA -->
     <section class="section">
-      <h2>Ready to Compare Tech-Forward Card Products?</h2>
+      <h2>Use AI Assistants as a Lens, Not a Driver</h2>
       <p class="small">
-        Use PayAI.Creditcard to understand how AI influences what happens behind the scenes — then go to the main hub to
-        compare real card products by fees, rewards, protections and technology features.
+        AI tools can make it easier to see patterns in your card spending and avoid missed payments. Combine them
+        with clear information about fees, interest and protections from the main comparison hub for a fuller view.
       </p>
-      <a class="cta" href="https://choose.creditcard/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=bottom_cta">
-        Go to Choose.Creditcard
+      <a class="cta" href="https://choose.creditcard/technology/?utm_source=payai.creditcard&utm_medium=referral&utm_campaign=bottom_cta">
+        Go to the Technology hub
       </a>
     </section>
   </main>
